dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(mfes, 0.1)

AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

MPICXX="mpicxx"
AC_PROG_CXX($MPICXX)
# AC_PROG_CC($MPICC)
# AC_PROG_CXX

AC_PROG_LIBTOOL

AC_CONFIG_FILES(Makefile src/Makefile)


AC_OUTPUT
